@@ -4,8 +4,7 @@ ___________________________________
 |  |   |  |  |  |  |     |     |  |
 |  ~~  |   ~~|     |  ~  |  |  |   ~~|          for all hackers.
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- Copyright (c) 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009,
-	2010, 2011, 2012, 2013
+ Copyright (c) 2000-2014
 	Tama Communications Corporation
 
  This file is free software; as a special exception the author gives
@@ -19,6 +18,14 @@ ___________________________________
 		----------------------------------
 
 ChangeLog about GNU GLOBAL
+
+March 17 2014, Shigio YAMAGUCHI
+
+	libutil/pathconvert.c module was divided into the following two modules:
+	o libutil/encodepath.c
+	o global/convert.c
+	According to the change, the function of the --path command of gtags(1)
+	(undocumented) was moved to global(1)'s --pathconvert command.
 
 December 18 2013, Shigio YAMAGUCHI
 
